fixed canvas overflow issue

--- a/ggn_portfolio_new/portfolio/components/Header.css
+++ b/ggn_portfolio_new/portfolio/components/Header.css
@@ -1,4 +1,4 @@
-.nav_bar {
+#nav_bar {
     position: absolute;
     width: 96%;
     display: flex;
@@ -32,7 +32,7 @@ span {
 }
 
 @media only screen and (max-width: 800px) {
-    .nav_bar { 
+    #nav_bar { 
         display: block;
     }
     ul { 
